# masterpiec2

./: CMakeLists.txt  CircularBuffer.hpp  I2CPortExpander.cpp  I2CPortExpander.hpp  New Text Document.txt  Rotary.hpp  TempSensors.hpp  hwdefs.h  main.cpp  screen.hpp  sdcard.c  util.c  util.h
include/: configsettings.h  events.h
lcd2/: CMakeLists.txt  LCD_I2C.cpp  LCD_I2C.hpp
lcd_1602_i2c/: CMakeLists.txt  cmake_install.cmake
max6675/: CMakeLists.txt  max6675.c  max6675.h
rotary/: CMakeLists.txt  Rotary.cpp  Rotary.hpp
